--- a/cards/package.json
+++ b/cards/package.json
@@ -13,8 +13,10 @@
     "@reduxjs/toolkit": "^1.9.5",
     "atropos": "^2.0.2",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.5",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
