--- a/cards/.env
+++ b/cards/.env
@@ -1,3 +1,4 @@
 VITE_API_URL=http://localhost:3000
 
 VITE_IMG_URL=https://tkpthdeszbzihmxpuuxi.supabase.co/storage/v1/object/public/cards
+VITE_IMG_URL2=https://tkpthdeszbzihmxpuuxi.supabase.co/storage/v1/object/public/portfolio
